[package]
name = "sep_score_proto"
version = "0.1.0"
authors = ["Rémi Piau <remi.piau@ens-rennes.fr>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/redmie/sep_score_proto"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Parse file
nom = "5.0.1"
